[package]
name = "burstc"
version = "0.1.0"
authors = ["Richard Rast <richard.rast@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecode = { path="../bytecode" }
compiler = { path="../compiler" }
vm = { path="../vm" }
